@@ -1,3 +1,9 @@
+Backwards compatibility breaks in 2.2.0:
+
+- Now using .text() to get the value of the inline editor by default, you can set extract_with_html:true to override this.
+  - submit to callback with hand over originalValue as third argument instead of originalHTML
+  - submit to server now uses originalValue on the original_html value
+
 Backwards compatibility breaks in 2.1.0:
 
 - All callbacks now recieve the DOM-Node of the editor set as their this context
